// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget-parallel-l1.acceptance given: [journey] parallel L1: L2 awaits ALL L1s when: [t0] artifact created, both L1s run, L2 awaits then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]
   ├─ ✓ review.2 - completed [TIME]
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (2 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: alpha-checker (l1, 1/5, rejected)
      │   │   ├─ rejected [TIME]
      │   │   ├─ review: .route/1.vision.guard.review.i1.e0aae4264c854c203aaff5a5ed15c176fb117aacd9ea5fed2ac8d500fa35679b.r1.md
      │   │   └─ 1 blocker 🔴
      │   ├─ r2: beta-checker (l1, 1/5, rejected)
      │   │   ├─ rejected [TIME]
      │   │   ├─ review: .route/1.vision.guard.review.i1.e0aae4264c854c203aaff5a5ed15c176fb117aacd9ea5fed2ac8d500fa35679b.r2.md
      │   │   └─ 1 blocker 🔴
      │   └─ r3: final-checker (l2, 0/5, awaits)
      │       └─ awaits l1
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (2 > 0)
"
`;

exports[`driver.route.peer-budget-parallel-l1.acceptance given: [journey] parallel L1: L2 awaits ALL L1s when: [t1] alpha passes but beta fails, L2 STILL awaits then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]
   ├─ ✓ review.2 - completed [TIME]
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: alpha-checker (l1, 2/5, approved)
      │   │   ├─ approved [TIME] ✓
      │   │   └─ review: .route/1.vision.guard.review.i1.6b085541feda505cf8c0d0d4929a3b937eac477a6af3437f758a27001cdbadae.r1.md
      │   ├─ r2: beta-checker (l1, 2/5, rejected)
      │   │   ├─ rejected [TIME]
      │   │   ├─ review: .route/1.vision.guard.review.i1.6b085541feda505cf8c0d0d4929a3b937eac477a6af3437f758a27001cdbadae.r2.md
      │   │   └─ 1 blocker 🔴
      │   └─ r3: final-checker (l2, 0/5, awaits)
      │       └─ awaits l1
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-parallel-l1.acceptance given: [journey] parallel L1: L2 awaits ALL L1s when: [t2] both L1s pass, L2 unlocks then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]
   ├─ ✓ review.2 - completed [TIME]
   ├─ ✓ review.3 - completed [TIME]
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: alpha-checker (l1, 3/5, approved)
      │   │   ├─ approved [TIME] ✓
      │   │   └─ review: .route/1.vision.guard.review.i1.7de8f5be336f95e3dd2e5b02467258533bcf304b0cbe0502fc0a08f5debbcc27.r1.md
      │   ├─ r2: beta-checker (l1, 3/5, approved)
      │   │   ├─ approved [TIME] ✓
      │   │   └─ review: .route/1.vision.guard.review.i1.7de8f5be336f95e3dd2e5b02467258533bcf304b0cbe0502fc0a08f5debbcc27.r2.md
      │   └─ r3: final-checker (l2, 1/5, rejected)
      │       ├─ rejected [TIME]
      │       ├─ review: .route/1.vision.guard.review.i1.7de8f5be336f95e3dd2e5b02467258533bcf304b0cbe0502fc0a08f5debbcc27.r3.md
      │       └─ 1 blocker 🔴
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-parallel-l1.acceptance given: [journey] parallel L1: L2 awaits ALL L1s when: [t3] L2 passes, stone passes then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]
   ├─ ✓ review.2 - completed [TIME]
   ├─ ✓ review.3 - completed [TIME]
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   ├─ r1: alpha-checker (l1, 4/5, approved)
   │  │   │   ├─ approved [TIME] ✓
   │  │   │   └─ review: .route/1.vision.guard.review.i1.7e36a690f2f6f8d2a5e590ffa5f9478b5a71c201c0dd14b6e05db02cf0a3e292.r1.md
   │  │   ├─ r2: beta-checker (l1, 4/5, approved)
   │  │   │   ├─ approved [TIME] ✓
   │  │   │   └─ review: .route/1.vision.guard.review.i1.7e36a690f2f6f8d2a5e590ffa5f9478b5a71c201c0dd14b6e05db02cf0a3e292.r2.md
   │  │   └─ r3: final-checker (l2, 2/5, approved)
   │  │       ├─ approved [TIME] ✓
   │  │       └─ review: .route/1.vision.guard.review.i1.7e36a690f2f6f8d2a5e590ffa5f9478b5a71c201c0dd14b6e05db02cf0a3e292.r3.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
